<resources>
    <string name="app_name" translatable="false">DemoApp</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="hello" translatable="false">hello</string>
    <string name="action_home" translatable="false">home</string>
    <string name="action_msg" translatable="false">message</string>
    <string name="action_friends" translatable="false">friends</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_regist">RegistActivity</string>


    <!-- 登录 -->
    <string name="username">用户名</string>
    <string name="pwd">密码</string>
    <string name="re_pwd">重复密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_regist">注册</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_dream_text_key">pref_dream_text</string>
    <string name="pref_dream_text_default">zzzZZZzzz</string>
    <string name="title_activity_gif">GifActivity</string>
    <string name="title_activity_detail">DetailActivity</string>


</resources>
