<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/action_home"
        android:icon="@drawable/ic_launcher"/>

    <item
        android:id="@+id/action_msg"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/action_msg"
        android:icon="@drawable/ic_launcher"/>

    <item
        android:id="@+id/action_friends"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/action_friends"
        android:icon="@drawable/ic_launcher"/>

</menu>