<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.demoapp.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_marginTopPercent = "5%">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_marginTopPercent = "5%"
        android:layout_below="@id/username_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwd" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <Button
        android:id="@+id/btn_login"
        app:layout_widthPercent = "60%"
        app:layout_marginTopPercent = "20%"
        android:layout_height="wrap_content"
        android:layout_below="@id/pwd_layout"
        android:text="@string/btn_login"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tv_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_login"
        app:layout_marginTopPercent = "20%"
        android:layout_alignBottom="@id/btn_login"
        android:layout_below="@id/pwd_layout"
        android:text="@string/btn_regist"
        android:gravity="bottom"/>

</android.support.percent.PercentRelativeLayout>
